# ke

./: .gitignore  CMakeLists.txt  Makefile  README.txt  TODO  abuf.c  abuf.cc  abuf.h  buffer.c  buffer.h  core.c  core.h  default.nix  display.cc  display.h  editing.c  editing.h  editor.c  editor.h  erow.cc  erow.h  file_io.cc  file_io.h  input_handler.cc  input_handler.h  ke.1  ke_constants.h  killring.c  killring.cc  killring.h  main.c  main.cc  process.c  process.h  scratch.c  term.c  term.h  terminal.cc  terminal.h  test.txt.bak  (+2 more)
.github/workflows/: release.yml
docs/: CONSTANTS_REFACTORING.md  CPP17_CONVERSION.md
